--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="icon" type="image/x-icon" href="favicon.ico">
           <link href="https://fonts.googleapis.com/css?family=Rouge+Script" rel="stylesheet">
-          <link rel="stylesheet" href="assets/css/main.css" >
+         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+           <link rel="stylesheet" href="assets/css/main.css" >
     </head>
     <body>
         <app-root></app-root>
